# blues-estimator-project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  context.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  task-creation.md
.github/workflows/: ci.yml
part1/: cross_validation.py  gauss_markov_util.py  ols_implementation.py  part1_notebook.ipynb  residual_analysis.py  ridge_lasso.py
part2/: advanced_methods.py  data_pipeline.py  model_comparison.py  part2_notebook.ipynb
part2/archive/: bayesian_random_forest_models.py  lasso_elasticnet_models.py  test_archived_models.py
report/: latexmkrc  report.tex  reportDoCS2025.cls  utilities.tex
report/chapters/: biblio.tex  conclusion.tex  credits.tex  part1.tex  part2.tex
tests/: test_advanced_methods.py  test_coef_inference.py  test_data_pipeline.py  test_gauss_markov.py  test_kfold_cv.py  test_metrics.py  test_model_comparison.py  test_ols.py  test_placeholder.py  test_properties.py  test_residual_analysis.py  test_ridge_fit.py  test_vif.py
