[project]
name = "blues-estimator-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
