[project]
name = "blues-estimator-project"
version = "0.1.0"
description = "Implementation of Best Linear Unbiased Estimators from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "interrogate>=1.7.0",
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.black]
target-version = ["py312"]

[tool.ruff.lint]
select = ["D2", "D4"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.interrogate]
ignore-init-method = true   # Skip __init__ methods
ignore-magic = true         # Skip magic methods like __str__ or __add__
ignore-semiprivate = true   # Skip _semiprivate methods (starting with one underscore)
ignore-private = true       # Skip __private methods (starting with two underscores)
ignore-property-decorators = false  # skips methods decorated with @property, @<prop>.setter, and @<prop>.deleter
fail-under = 90             # Fail when coverage percentage is less than the given amount
exclude = ["setup.py", "tests", "docs"]
verbose = 1                 # Print a file-by-file summary